--- a/src/app/Paginas/LadoAdmin/MateriasPrimas/agregar-materia-prima/agregar-materia-prima.component.html
+++ b/src/app/Paginas/LadoAdmin/MateriasPrimas/agregar-materia-prima/agregar-materia-prima.component.html
@@ -30,16 +30,16 @@
         <div class="row py-4">
             <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center mt-2">
                 <div class="">
-                    <button class="btn btn-success" type="submit" id="">Agregar</button>
+                    <button class="btn btn-success" type="submit" id=""  matTooltip="Agregar materia prima">Agregar</button>
                 </div>
             </div>
             <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center mt-2">
                 <div class="">
-                    <button class="btn btn-danger" (click)="Limpiar(this.f)">Cancelar</button>
+                    <button class="btn btn-danger" (click)="Limpiar(this.f)"  matTooltip="Cancelar">Cancelar</button>
                 </div>
             </div>
             <div class="col-md-6 col-lg-6 text-center mt-3">
-                <i class="fa-solid fa-arrow-left icono" (click)="volver()"></i>
+                <i class="fa-solid fa-arrow-left icono" (click)="volver()"  matTooltip="Volver al listado"></i>
             </div>
         </div>
     </form>
