--- a/src/app/Seguridad/Login/login/login.component.html
+++ b/src/app/Seguridad/Login/login/login.component.html
@@ -12,21 +12,24 @@
                         <div class="mb-4 form-group">
                             <label class="form-label TextWhite">Correo Electrónico</label>
                             <input type="email" class="form-control bordeAzul" name="email" formControlName="email"
-                            [class.red-icon]="this.loginForm.get('email')?.invalid">
+                                [class.red-icon]="this.loginForm.get('email')?.invalid">
                         </div>
                         <div class="mb-4 form-group">
-                            <label class="form-label TextWhite">Contraseña</label><span class="eyeIcon flechaAzul" style="padding-left: 5px;"
-                                (click)="viewpass()"><i [ngClass]="visible?'fa-solid fa-eye-slash':'fa-solid fa-eye'"
-                                    tippy="Ver contraseña"></i></span>
-                            <input [type]="changeType?'password':'text'" class="form-control bordeAzul" name="contrasenia"
-                                formControlName="contrasenia"
+                            <label class="form-label TextWhite">Contraseña</label><span class="eyeIcon flechaAzul"
+                                style="padding-left: 5px;" (click)="viewpass()"><i
+                                    [ngClass]="visible?'fa-solid fa-eye-slash':'fa-solid fa-eye'"
+                                    matTooltip="Ver contraseña"></i></span>
+                            <input [type]="changeType?'password':'text'" class="form-control bordeAzul"
+                                name="contrasenia" formControlName="contrasenia"
                                 [class.red-icon]="this.loginForm.get('contrasenia')?.invalid">
                         </div>
                         <div class="d-grid py-2">
-                            <button type="submit" class="btn btnAzul" [disabled]="loginForm.invalid">Iniciar Sesión</button>
+                            <button type="submit" class="btn btnAzul" [disabled]="loginForm.invalid"
+                                matTooltip="Iniciar sesión">Iniciar Sesión</button>
                         </div>
-                        <div class="d-flex py-3 mt-2 mb-2 justify-content-center" tippy="Volver al inicio">
-                            <i class="fa-solid fa-arrow-left icono flechaAzul" routerLink="" type="button"></i>
+                        <div class="d-flex py-3 mt-2 mb-2 justify-content-center">
+                            <i class="fa-solid fa-arrow-left icono flechaAzul" routerLink="" type="button"
+                                matTooltip="Volver al inicio"></i>
                         </div>
                     </form>
                 </div>
