--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
 .BackgroundAzul {
     background-color: #162B4E;
 }
@@ -44,13 +46,13 @@ select.ng-touched.ng-dirty.ng-invalid {
 }
 
 input.ng-valid {
-    border-color: #198754;
-    box-shadow: 0px 0px 1.5px 0px #198754;
+    border-color: #457ddd;
+    box-shadow: 0px 0px 1.5px 0px #457ddd;
 }
 
 select.ng-valid {
-    border-color: #198754;
-    box-shadow: 0px 0px 1.5px 0px #198754;
+    border-color: #457ddd;
+    box-shadow: 0px 0px 1.5px 0px #457ddd;
 }
 
 .ff {
