--- a/src/app/Paginas/LadoAdmin/MateriasPrimas/listado-materia-prima/listado-materia-prima.component.html
+++ b/src/app/Paginas/LadoAdmin/MateriasPrimas/listado-materia-prima/listado-materia-prima.component.html
@@ -1,14 +1,14 @@
 <div class="container TextWhite rounded-2 ff mtt">
-    <h1 class="text-center py-2">Materias Primas</h1>
+    <h1 class="text-center py-2">MATERIAS PRIMAS</h1>
     <hr>
-    <label class="mb-2" for="">Buscar</label>
+    <label class="mb-2" for="">BUSCAR</label>
     <div class="row py-2 mtc-5 mb-2" style="text-align: center;">
         <div class="col-8 col-sm-8 col-md-8 col-lg-8 ">
             <input type="text" class="form-control inputColor" [(ngModel)]="filtro" (keyup)="filtrarTabla()"
                 matTooltip="Filtrar" />
         </div>
         <div class="col-4 col-sm-4 col-md-4 col-lg-4 text-center">
-            <button class="btn btnCeleste" (click)="agregar()" matTooltip="Nueva materia prima">Nuevo</button>
+            <button class="btn btnCeleste" (click)="agregar()" matTooltip="Nueva materia prima">NUEVO</button>
         </div>
     </div>
     <hr />
@@ -17,8 +17,8 @@
         <table class="table  table-responsive mtc-5 TextWhite" matSort (matSortChange)="sortData($event)">
             <thead class="table  mtc-5 table-sm TextWhite">
                 <tr>
-                    <th mat-sort-header="codigo" scope="col">Código</th>
-                    <th mat-sort-header="descripcion" scope="col">Descripcion</th>
+                    <th mat-sort-header="codigo" scope="col">CÓDIGO</th>
+                    <th mat-sort-header="descripcion" scope="col">DESCRIPCIÓN</th>
                     <th scope="col"></th>
                 </tr>
             </thead>
