--- a/src/app/Paginas/LadoAdmin/Productos/listado-productos/listado-productos.component.html
+++ b/src/app/Paginas/LadoAdmin/Productos/listado-productos/listado-productos.component.html
@@ -1,14 +1,14 @@
 <div class="container TextWhite rounded-2 ff mtt">
-  <h1 class="text-center py-2">Productos</h1>
+  <h1 class="text-center py-2">PRODUCTOS</h1>
   <hr />
-  <label class="mb-2" for="">Buscar</label>
+  <label class="mb-2" for="">BUSCAR</label>
   <div class="row py-2 mtc-5 mb-2" style="text-align: center">
     <div class="col-8 col-sm-8 col-md-8 col-lg-8">
       <input type="text" class="form-control inputColor" [(ngModel)]="filtro" (keyup)="filtrarTabla()"
         matTooltip="Filtrar" />
     </div>
     <div class="col-4 col-sm-4 col-md-4 col-lg-4 text-center">
-      <button class="btn btnCeleste" (click)="agregar()" matTooltip="Nuevo producto">Nuevo</button>
+      <button class="btn btnCeleste" (click)="agregar()" matTooltip="Nuevo producto">NUEVO</button>
     </div>
   </div>
   <hr />
@@ -16,13 +16,13 @@
     <table class="table table-responsive mtc-5 TextWhite" matSort (matSortChange)="sortData($event)">
       <thead class="table mtc-5 table-sm TextWhite">
         <tr>
-          <th mat-sort-header="codigo" scope="col">Código</th>
-          <th mat-sort-header="nombre" scope="col">Nombre</th>
-          <th mat-sort-header="colorProducto" scope="col">Color</th>
-          <th mat-sort-header="disenioProducto" scope="col">Diseño</th>
-          <th mat-sort-header="medidaProducto" scope="col">Medida</th>
-          <th mat-sort-header="tipoProducto" scope="col">Tipo</th>
-          <th mat-sort-header="precioBocha" scope="col">Precio</th>
+          <th mat-sort-header="codigo" scope="col">CÓDIGO</th>
+          <th mat-sort-header="nombre" scope="col">NOMBRE</th>
+          <th mat-sort-header="colorProducto" scope="col">COLOR</th>
+          <th mat-sort-header="disenioProducto" scope="col">DISEÑO</th>
+          <th mat-sort-header="medidaProducto" scope="col">MEDIDA</th>
+          <th mat-sort-header="tipoProducto" scope="col">TIPO</th>
+          <th mat-sort-header="precioBocha" scope="col">PRECIO</th>
           <th scope="col"></th>
         </tr>
       </thead>
