--- a/src/app/Paginas/LadoAdmin/MateriasPrimas/agregar-materia-prima/agregar-materia-prima.component.html
+++ b/src/app/Paginas/LadoAdmin/MateriasPrimas/agregar-materia-prima/agregar-materia-prima.component.html
@@ -1,11 +1,11 @@
 <div class="container TextWhite mtt ff shadow-lg rounded-2">
     <form #f="ngForm" (ngSubmit)="registrarMateriaPrima(f)" class="container">
-        <h1 class="text-center py-3">Registrar Materia Prima</h1>
+        <h1 class="text-center py-3">REGISTRAR MATERIA PRIMA</h1>
         <hr />
         <div class="row">
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-3">
                 <div class="form-group">
-                    <label for="codigo">Código</label>
+                    <label for="codigo">CÓDIGO</label>
                     <input type="text" class="form-control" [(ngModel)]="materiaPrima.codigo" #codigo="ngModel"
                         name="codigo" required placeholder="Ingrese el codigo" pattern="[0-9]*" />
                     <div *ngIf="codigo.invalid && (codigo.dirty || codigo.touched)">
@@ -15,7 +15,7 @@
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-3">
                 <div class="form-group">
-                    <label for="descripcion">Descripcion</label>
+                    <label for="descripcion">DESCRIPCIÓN</label>
                     <input type="text" class="form-control" [(ngModel)]="materiaPrima.descripcion"
                         #descripcion="ngModel" name="descripcion" required pattern="[a-zA-Z\s]+"
                         placeholder="Introduzca la descripción" />
@@ -30,12 +30,12 @@
         <div class="row py-4">
             <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center mt-2">
                 <div class="">
-                    <button class="btn btn-success" type="submit" id=""  matTooltip="Agregar materia prima">Agregar</button>
+                    <button class="btn btn-success" type="submit" id=""  matTooltip="Agregar materia prima">AGREGAR</button>
                 </div>
             </div>
             <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center mt-2">
                 <div class="">
-                    <button class="btn btn-danger" (click)="Limpiar(this.f)"  matTooltip="Cancelar">Cancelar</button>
+                    <button class="btn btn-danger" (click)="Limpiar(this.f)"  matTooltip="Cancelar">CANCELAR</button>
                 </div>
             </div>
             <div class="col-md-6 col-lg-6 text-center mt-3">
