Cambios de catalogo

--- a/src/app/General/Barra/barra-navegacion/barra-navegacion.component.html
+++ b/src/app/General/Barra/barra-navegacion/barra-navegacion.component.html
@@ -53,7 +53,7 @@
                     </ul>
                 </li>
                 <li class="nav-item" *ngIf="this.userHasRole(['Adm'])">
-                    <a class="nav-link active letra" href="#" routerLink="/admin/catalogoAdmin"
+                    <a class="nav-link active letra" href="#" routerLink="/admin/listadoCatalogo"
                         (click)="isNavbarCollapsed = true">CATÁLOGO</a>
                 </li>
                 <li class="nav-item" *ngIf="this.userHasRole(['Adm'])">
